--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         enim? Nam nesciunt temporibus dolorum eligendi ratione atque nihil
         cumque veniam culpa quo?
       </p>
-      <img src="img/2.jpg" alt="desk-setup" />
+      <img src="img/2.jpg" class="full-size-img" alt="desk-setup" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
         dolores ullam, itaque sint, sapiente quam possimus consequatur
